fix overflow

--- a/gallery.css
+++ b/gallery.css
@@ -21,6 +21,8 @@ body {
 }
 
 nav {
+  position: relative;
+  overflow-x: hidden;
   display: flex;
   justify-content: space-around;
   align-items: center;
