--- a/videos.css
+++ b/videos.css
@@ -24,6 +24,8 @@ body {
 }
 
 nav {
+  position: relative;
+  overflow-x: hidden;
   display: flex;
   justify-content: space-around;
   align-items: center;
